--- a/index.html
+++ b/index.html
@@ -1,12 +1,241 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My GitHub Pages Site</title>
-  </head>
-  <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a simple webpage hosted on GitHub Pages!</p>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Personal Website</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header {
+      background: #333;
+      color: #fff;
+      padding: 1rem 0;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+    }
+    nav {
+      background: #444;
+      display: flex;
+      justify-content: center;
+      padding: 0.5rem 0;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 1rem;
+      font-size: 1.2rem;
+    }
+    nav a:hover {
+      color: #f39c12;
+    }
+    .container {
+      padding: 2rem;
+      max-width: 1200px;
+      margin: auto;
+    }
+    .section {
+      margin-bottom: 2rem;
+    }
+    .portfolio-item {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+    .portfolio-item img {
+      max-width: 100%;
+      border-radius: 8px;
+    }
+    footer {
+      background: #333;
+      color: #fff;
+      text-align: center;
+      padding: 1rem 0;
+      margin-top: 2rem;
+    }
+    footer a {
+      color: #f39c12;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>My Personal Website</h1>
+    <p>Welcome to my online space!</p>
+  </header>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#portfolio">Portfolio</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <div class="container">
+    <!-- About Section -->
+    <section id="about" class="section">
+      <h2>About Me</h2>
+      <p>Hello! I'm [Your Name], a [Your Profession]. I specialize in [Your Skills or Expertise]. I love building creative projects and solving challenging problems. Welcome to my personal website!</p>
+    </section>
+
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="section">
+      <h2>Portfolio</h2>
+      <div class="portfolio-item">
+        <div>
+          <img src="https://via.placeholder.com/300" alt="Project 1">
+          <h3>Project 1</h3>
+          <p>A brief description of the project.</p>
+        </div>
+        <div>
+          <img src="https://via.placeholder.com/300" alt="Project 2">
+          <h3>Project 2</h3>
+          <p>A brief description of the project.</p>
+        </div>
+        <div>
+          <img src="https://via.placeholder.com/300" alt="Project 3">
+          <h3>Project 3</h3>
+          <p>A brief description of the project.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="section">
+      <h2>Contact</h2>
+      <p>If you'd like to get in touch, you can email me at <a href="mailto:your-email@example.com">your-email@example.com</a>.</p>
+      <p>Connect with me on <a href="https://linkedin.com/in/your-profile" target="_blank">LinkedIn</a> or <a href="https://github.com/your-profile" target="_blank">GitHub</a>.</p>
+    </section>
+  </div>
+
+  <footer>
+    <p>&copy; 2024 [Your Name]. All rights reserved. Built with ❤.</p>
+  </footer>
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Personal Website</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header {
+      background: #333;
+      color: #fff;
+      padding: 1rem 0;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+    }
+    nav {
+      background: #444;
+      display: flex;
+      justify-content: center;
+      padding: 0.5rem 0;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 1rem;
+      font-size: 1.2rem;
+    }
+    nav a:hover {
+      color: #f39c12;
+    }
+    .container {
+      padding: 2rem;
+      max-width: 1200px;
+      margin: auto;
+    }
+    .section {
+      margin-bottom: 2rem;
+    }
+    .portfolio-item {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+    .portfolio-item img {
+      max-width: 100%;
+      border-radius: 8px;
+    }
+    footer {
+      background: #333;
+      color: #fff;
+      text-align: center;
+      padding: 1rem 0;
+      margin-top: 2rem;
+    }
+    footer a {
+      color: #f39c12;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>My Personal Website</h1>
+    <p>Welcome to my online space!</p>
+  </header>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#portfolio">Portfolio</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <div class="container">
+    <!-- About Section -->
+    <section id="about" class="section">
+      <h2>About Me</h2>
+      <p>Hello! I'm [Your Name], a [Your Profession]. I specialize in [Your Skills or Expertise]. I love building creative projects and solving challenging problems. Welcome to my personal website!</p>
+    </section>
+
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="section">
+      <h2>Portfolio</h2>
+      <div class="portfolio-item">
+        <div>
+          <img src="https://via.placeholder.com/300" alt="Project 1">
+          <h3>Project 1</h3>
+          <p>A brief description of the project.</p>
+        </div>
+        <div>
+          <img src="https://via.placeholder.com/300" alt="Project 2">
+          <h3>Project 2</h3>
+          <p>A brief description of the project.</p>
+        </div>
+        <div>
+          <img src="https://via.placeholder.com/300" alt="Project 3">
+          <h3>Project 3</h3>
+          <p>A brief description of the project.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="section">
+      <h2>Contact</h2>
+      <p>If you'd like to get in touch, you can email me at <a href="mailto:your-email@example.com">your-email@example.com</a>.</p>
+      <p>Connect with me on <a href="https://linkedin.com/in/your-profile" target="_blank">LinkedIn</a> or <a href="https://github.com/your-profile" target="_blank">GitHub</a>.</p>
+    </section>
+  </div>
+
+  <footer>
+    <p>&copy; 2024 [Your Name]. All rights reserved. Built with ❤.</p>
+  </footer>
+</body>
 </html>
